--- a/Readme
+++ b/Readme
@@ -4,7 +4,7 @@ A small repository, containing some programs I've written as I set about learnin
 
 Projects:
     - First: some very small, hello-world style programs to get a feel for the language
-    - Data structures: trying out some basic data structures in Rust
+    - Sorting: Some sample sort algorithm implementations in Rust, along with some basic benchmarking code
     - Crawler: a test of the Rust networking libraries, and a chance for me to try some networking code
 
 All code is available under the MIT license - see License.txt for further details.
