--- a/Readme
+++ b/Readme
@@ -9,4 +9,4 @@ Projects:
 
 All code is available under the MIT license - see License.txt for further details.
 
-Copyright Damien Schoof 2012.
+Copyright Damien Schoof 2012-2013.
